apps/media/jellyfin/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      runtimeClassName: nvidia
      securityContext:
        fsGroup: 1000
      nodeSelector:
        kubernetes.io/hostname: drone-04
        nvidia.com/gpu.present: 'true'
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest@sha256:c7dd335d455c95ad3fe7550824d93ceb911914bf4210e7899e11f9611ae53a92
          resources:
            requests:
              memory: 1G
            limits:
              nvidia.com/gpu: '1'
              memory: 4G
          securityContext:
            privileged: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          ports:
            - name: http
              containerPort: 8096
