apps/media/jellyfin/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.beaver-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  name: http
